🐛 Fix .product-recommendation align-itmes to start

--- a/styles/components/_product-recommendation.scss
+++ b/styles/components/_product-recommendation.scss
@@ -1,6 +1,6 @@
 .product-recommendation {
   .product-list {
-    @include flexbox(between);
+    @include flexbox(between, start);
     flex-wrap: wrap;
   }
 
